# naver-post-crawler

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: SPEC.md  handoff-cookie-webview-login.md
scripts/: _common.py  build-unix.sh  build-windows.ps1  build.py  run.py  run.sh  setup.py  setup.sh  test.py  test.sh
src/: main.py
src/naver_blog_crawler/: __init__.py  cli.py  client.py  cookie.py  crawler.py  enums.py  errors.py  failures.py  gui.py  http.py  log.py  models.py  parser.py  source.py  writer.py
src/naver_post_crawler/: __init__.py  __main__.py  blog_id.py  cafe_client.py  cafe_ref.py  cli.py  cookie.py  cookie_login.py  crawler.py  gui.py  log.py  source.py  updater.py
tests/: conftest.py  test_blog_id.py  test_build_cleanup.py  test_cafe_client.py  test_cafe_integration.py  test_cafe_ref.py  test_cli.py  test_client.py  test_cookie.py  test_cookie_login.py  test_crawler.py  test_failures.py  test_gui.py  test_log.py  test_parser.py  test_updater.py  test_version.py  test_writer.py
