[project]
name = "naver-blog-crawler"
version = "0.1.0"
description = "네이버 블로그의 전체 글을 과거→최근 순으로 txt 파일로 백업하는 크롤러"
readme = "README.md"
authors = [
    { name = "thsvkd", email = "thsxogud1123@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.0",
    "httpx>=0.28.1",
    "rich>=15.0.0",
    "selectolax>=0.4.9",
]

[project.optional-dependencies]
gui = ["flet>=0.85"]

[project.scripts]
naver-blog-crawler = "naver_blog_crawler.cli:main"
naver-blog-crawler-gui = "naver_blog_crawler.gui:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.flet.app]
# src-layout이므로 flet build가 src/ 아래에서 진입 모듈을 찾도록 지정한다.
# (app.path는 CLI 옵션이 없어 pyproject.toml이 유일한 설정 위치다.)
module = "naver_blog_crawler.gui"
path = "src"
