[project]
name = "naver-post-crawler"
version = "0.1.0"
description = "네이버 블로그·카페의 글을 과거→최근 순으로 txt 파일로 백업하는 크롤러"
readme = "README.md"
authors = [{ name = "thsvkd", email = "thsxogud1123@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.0",
    # GUI(flet)는 이 앱의 일급 기능(run.py 무인자 = GUI)이므로 기본 의존성으로 둔다.
    # optional extra로 두면 uv가 명령마다 환경을 재동기화하며 flet을 설치/삭제 반복한다.
    # "flet>=0.85",
    "flet-desktop>=0.85.1",
    "httpx>=0.28.1",
    "rich>=15.0.0",
    "selectolax>=0.4.9",
    # 앱 내 웹뷰 네이버 로그인(cookie_login). pywebview로 네이티브 웹뷰를 별도
    # 프로세스에 띄워 HttpOnly 세션 쿠키를 수거한다. Windows 백엔드(WebView2)는
    # pythonnet으로 .NET 상호운용하므로 win32에서만 함께 설치한다(WebView2 런타임은
    # Win11 기본 탑재). mac/Linux 백엔드(pyobjc/PyGObject)는 Phase 2에서 추가한다.
    "pywebview>=6.0",
    "pythonnet>=3.0 ; sys_platform == 'win32'",
]

[project.scripts]
naver-post-crawler = "naver_post_crawler.cli:main"
naver-post-crawler-gui = "naver_post_crawler.gui:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
# flet-cli는 `flet pack`(scripts/build.py의 유일한 빌드 경로) 실행에 쓰는 `flet` CLI를
# 제공한다. 선언하지 않으면 `uv sync`가 매번 "불필요"로 보고 제거하고, 직후 빌드가
# 다시 설치해 설치/삭제가 반복된다. dev 그룹에 두면 sync가 보존해 이 churn을 없앤다.
# pyinstaller는 `flet pack`이 내부에서 `import PyInstaller`를 하므로 없으면 빌드가 실패한다.
dev = ["pytest>=9.0.3", "ruff>=0.15.13", "flet-cli>=0.85.1", "pyinstaller>=6.0"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.flet.app]
# src-layout이므로 flet build가 src/ 아래에서 진입 모듈을 찾도록 지정한다.
# (app.path는 CLI 옵션이 없어 pyproject.toml이 유일한 설정 위치다.)
# module은 점을 확장자 구분자로 다루므로 dotted 패키지 경로(naver_post_crawler.gui)는
# naver_post_crawler.py를 찾다 실패한다. 앱 루트의 main.py 셔임을 진입점으로 둔다.
module = "main"
path = "src"
